--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,7 @@
   {
     "name": "🌸 nanoCloud",
     "cost": 1.0,
-    "path": "dat/nanocloud.yaml"
+    "path": "dat/nanocloud.json",
+    "format": "sing-box"
   }
 ]
