--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,10 +77,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Checkout private
-        uses: actions/checkout@v5
-        with:
-          repository: https://${{ secrets.GITEE_USER }}:${{ secrets.GITEE_TOKEN }}@gitee.com/moonfruit/private.git
-          path: private
+        env:
+          GITEE_USER: ${{ secrets.GITEE_USER }}
+          GITEE_TOKEN: ${{ secrets.GITEE_TOKEN }}
+        run: ./checkout-gitee.sh "$GITEE_USER" "$GITEE_TOKEN"
 
       - name: Build config
         if: env.BUILD_CONFIG == 1
