--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -93,7 +93,7 @@ jobs:
         run: ./build-sing-rules.sh
 
       - name: Commit and Push (private)
-        run: ../commit-and-push.sh "Update config"
+        run: ../commit-and-push.sh "Update config" || true
         working-directory: private
 
       - name: Commit and Push
