--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Preflight
         run: |
           set -o pipefail
-          ./preflight.sh xipcloud.yaml nanocloud.json | tee -a $GITHUB_ENV
+          ./preflight.sh nanocloud.json | tee -a $GITHUB_ENV
 
       - name: Checkout geo
         if: env.BUILD_RULES == 1
