--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Set Variables
         run: |
-          echo "TAG=$(env TZ=Asia/Shanghai date +%Y%m%d%H%M)" | tee -a $GITHUB_ENV
+          echo "TAG=$(env TZ=Asia/Shanghai date +%Y%m%d%H%M)" | tee -a "$GITHUB_ENV"
 
       - name: Checkout
         uses: actions/checkout@v5
@@ -38,7 +38,7 @@ jobs:
       - name: Preflight
         run: |
           set -o pipefail
-          ./preflight.sh nanocloud.json | tee -a $GITHUB_ENV
+          ./preflight.sh nanocloud.json | tee -a "$GITHUB_ENV"
 
       - name: Checkout geo
         if: env.BUILD_RULES == 1
