Import from ash

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,8 +31,10 @@ jobs:
 
       - name: Download clash config
         env:
+          ASH_URL: ${{ secrets.ASH_URL }}
           NANOCLOUD_URL: ${{ secrets.NANOCLOUD_URL }}
         run: |
+          curl -fsSL -H "User-Agent: sing-box/*" "$ASH_URL" >dat/ash.json
           curl -fsSL -H "User-Agent: sing-box/*" "$NANOCLOUD_URL" >dat/nanocloud.json
 
       - name: Preflight
