Add rules for emby

--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,27 @@
 [
   {
-    "name": "👻 ash",
+    "name": "👻 Ash",
     "cost": 1.0,
     "path": "dat/ash.json",
-    "format": "sing-box"
+    "format": "sing-box",
+    "emby": {
+      "domain": [
+        "tv.ash.yt"
+      ],
+      "exclude": [
+        "美国",
+        "日本"
+      ]
+    }
   },
   {
-    "name": "🌸 nanoCloud",
+    "name": "🌸 NanoCloud",
     "cost": 1.0,
     "path": "dat/nanocloud.json",
     "format": "sing-box"
   },
   {
-    "name": "☁️ xipCloud",
+    "name": "☁️ XipCloud",
     "cost": -1.0,
     "path": "dat/xipcloud.yaml"
   }
